# constellate

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
constellate-server/: .env  .env.production  .gitignore  Procfile  dark.yml  light.yml  next.config.js  package.json  requirements.txt  rho-blueprint.mplstyle  rho-carbon.mplstyle  rho-dark.mplstyle  rho-light.mplstyle  rho.mplstyle  tsconfig.json
constellate-server/public/: mcmc.constellate.json  plotly_rho_dark.json  plotly_rho_light.json  testPyscript.js  testWidget.json  testWidgets.json  vega_rho_dark.json  vega_rho_light.json
constellate-server/public/.panel_servers/: cOttslzpl1.py
constellate-server/public/constellate_themes/: themes.jsx
constellate-server/public/constellations/: bayes-in-the-real-world-the-metropolis-hastings-algorithm.constellate  computing-fibonacci-numbers.constellate  constellate-tutorial.constellate  developing-a-collection-of-colors-for-data-visualization.constellate  introduction-to-constellate.constellate  metropolis-hastings-in-the-real-world.constellate  testing-jupyter-widgets.constellate
constellate-server/public/constellations-avail/: constellate-tutorial.constellate  metropolis-hastings-in-the-real-world.constellate
constellate-server/public/constellations/.panel_servers/: 1DbjoPWM.py  3o92b8U6.py  4rsofKUU.py  64TqVo9g.py  8PpDWGuW.py  Ao2SZDeM.py  GDrzvqv3.py  M7pl50Ny2.py  MvprYoYi.py  OCOi1l6J.py  QyIjXsA6.py  S2IQfLwsl.py  WXMHpt84.py  gGWl1plFd.py  plhNtm6Osl.py  u9626Wiw.py  ww66WBJ5.py  z0XFTuoE.py
constellate-server/src/components/: hotkeys.tsx  side_nav.tsx
constellate-server/src/components/markdown/: create_comp.tsx  footnotes_collapse.tsx  math.tsx  preamble.tsx  text_panel.tsx
constellate-server/src/components/next_eui/: button.tsx
constellate-server/src/components/panels/: code_panel.tsx  df_panel.tsx  image_panel.tsx  latex_panel.tsx  panel_content.tsx  panel_panel.styles.ts  panel_panel.tsx  plotly_panel.styles.ts  plotly_panel.tsx  src_block.tsx  vega_panel.tsx  widget_panel.styles.ts  widget_panel.tsx
constellate-server/src/components/rho/: index.tsx  theme_switcher.tsx
constellate-server/src/components/starter/: doc_panel.tsx  header.tsx  home_hero.tsx  home_illustration.tsx  home_templates.tsx
constellate-server/src/lib/: constellate.tsx  loader.ts
constellate-server/src/pages/: _app.tsx  _document.tsx  index.tsx
constellate-server/src/pages/[constellation]/: [id].tsx
constellate-server/src/styles/: code_block_themes.tsx  color_classes.tsx  footnotes.styles.ts  global.styles.ts  index.styles.ts  panel_overrides.tsx  themed_overrides.tsx
constellate/cli/: app.py
constellate/constellate/: constellation.py  star.py
docs/: constellate-intro.ipynb  constellate-tutorial.ipynb
tests/: test-namespaces.ipynb
