[tool.poetry]
name = "constellate"
version = "0.1.0"
description = "Render Jupyter Notebooks as beautiful interactive webapps"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
yapf = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
