[metadata]
name = constellate-nicholas-miklaucic
version = 0.0.1
author = Nicholas Miklaucic
author_email = nicholas.miklaucic@gmail.com
description = Seamlessly Deploying Interactive Notebooks to the Web
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicholas-miklaucic/constellate
project_urls =
    Bug Tracker = https://github.com/nicholas-miklaucic/constellate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = constellate
packages = find:
python_requires = >=3.7

[options.packages.find]
where = constellate
